--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+MIDTRANS_SERVER_KEY ="Mid-server-ZgANbR4DTMrA7W1S3-eyrobp"
+MIDTRANS_CLIENT_KEY ="Mid-client-RAgXkXO9dpBn1SEo"
+MIDTRANS_IS_PRODUCTION = false
+MIDTRANS_IS_SANITIZED = true
+MIDTRANS_IS_3DS = true
